--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
       <div id="dodger" style="bottom: 0px; left: 180px;"></div>
     </div>
     <script>
+function moveDodgerRight() {
+var rightNumbers = dodger.style.left.replace('px', '');
+var right = parseInt(rightNumbers, 10);
 
+if (right < 360) {
+dodger.style.left = `${right +1}px`;
+}
+}
     </script>
   </body>
 </html>
