--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@ if (right < 360) {
 dodger.style.left = `${right +1}px`;
 }
 }
+document.addEventListener('keydown', function(key) {
+  if (key.which === 39) {
+    moveDodgerRight()
+  }
+})
 
     </script>
   </body>
